tests/snapshots/run_wpt_conformance__coreml_logicalAnd_uint8_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
logical_and.https.any.js logicalAnd uint8 0D scalar, coreml
 Failed to dispatch graph: coreml runtime failed: MLMultiArray has no backing buffer for data type Uint8

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: u8[];
    inputB: u8[];
  }

  nodes {
    [output] = logicalAnd(inputA, inputB, label="");
  }

  outputs { output; }
}
