tests/snapshots/run_wpt_conformance__coreml_logicalAnd_uint8_5D_and_broadcastable_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
logical_and.https.any.js logicalAnd uint8 5D and broadcastable 4D, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: compiler error: Error reading protobuf spec. validator error: unable to deserialize object

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: u8[1, 2, 2, 1, 1];
    inputB: u8[2, 1, 1, 3];
  }

  nodes {
    [output] = logicalAnd(inputA, inputB, label="");
  }

  outputs { output; }
}
