tests/snapshots/run_wpt_conformance__coreml_logicalAnd_uint8_broadcast_4D_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
logical_and.https.any.js logicalAnd uint8 broadcast 4D to 5D, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: compiler error: Error reading protobuf spec. validator error: unable to deserialize object

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: u8[2, 1, 1, 3];
    inputB: u8[1, 2, 2, 1, 1];
  }

  nodes {
    [output] = logicalAnd(inputA, inputB, label="");
  }

  outputs { output; }
}
