tests/snapshots/run_wpt_conformance__coreml_matmul_float32_3D_and_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
matmul.https.any.js matmul float32 3D and 3D tensors, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'inputB' must be of rank 2, instead got a multi-array value of rank 3.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 3, 4];
    inputB: f32[2, 4, 5];
  }

  nodes {
    [output] = matmul(inputA, inputB, label="");
  }

  outputs { output; }
}
