tests/snapshots/run_wpt_conformance__coreml_maxPool2d_float32_4D_tensor_options_outputShapeRounding_ceil_and_symmetric_padding.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
maxPool2d.https.any.js maxPool2d float32 4D tensor options.outputShapeRounding=ceil and symmetric padding, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: NSGenericException: Failed to add operation to E5 stream. E5RT: Unable to bind buffer to network. (2)

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    maxPool2dInput: f32[1, 2, 5, 5];
  }

  nodes {
    [maxPool2dOutput] = maxPool2d(maxPool2dInput, dilations=[], label="", layout="", outputShapeRounding="ceil", outputSizes=null, padding=[1, 1, 1, 1], strides=[3, 3], windowDimensions=[3, 3]);
  }

  outputs { maxPool2dOutput; }
}
Unable to bind buffer to network. @ BindBuffersPort bindings cannot be changed while operation is in use in an execution stream. @ BindMemoryObjectPort bindings cannot be changed while operation is in use in an execution stream. @ BindMemoryObject
