tests/snapshots/run_wpt_conformance__coreml_max_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
max.https.any.js max float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983299845_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([111, 76, 130, 85, 102, 202, 233, 73, 225, 76, 220, 211, 89, 82, 29, 211, 82, 82, 0, 214, 71, 82, 38, 77, 150, 211, 13, 214, 40, 83, 9, 211, 155, 84, 86, 77, 254, 84, 187, 205, 236, 60, 27, 84, 62, 86, 202, 211]);
    operand_1: f16[24] @bytes([80, 208, 92, 85, 116, 78, 182, 213, 112, 85, 174, 49, 174, 84, 43, 196, 156, 212, 236, 82, 86, 211, 58, 212, 157, 213, 35, 200, 26, 86, 31, 210, 246, 85, 22, 214, 125, 211, 18, 86, 7, 209, 176, 211, 44, 80, 89, 74]);
  }

  nodes {
    [output] = max(operand_0, operand_1, label="");
  }

  outputs { output; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983299845_0.mlmodelc/model.mil:7:12: Storage Reader expects file format version 2..
